# iroha-java

./: .editorconfig  .gitignore  build.gradle  gradle.properties  settings.gradle
.github/workflows/: iroha2-allure.yml  iroha2-pr.yml  iroha2.yml
docker-compose/: docker-compose.yaml
examples/tutorial/: build.gradle.kts
examples/tutorial/src/main/kotlin/jp/co/soramitsu/iroha2/: Main.kt  Query.kt  SendTransaction.kt
modules/admin-client/: build.gradle
modules/admin-client/src/main/kotlin/jp/co/soramitsu/iroha2/: AdminIroha2AsyncClient.kt  AdminIroha2Client.kt  PeerStatus.kt
modules/admin-client/src/test/kotlin/jp/co/soramitsu/iroha2/: ClientTest.kt
modules/block/: build.gradle
modules/block/src/main/kotlin/jp/co/soramitsu/iroha2/: Genesis.kt  Serde.kt
modules/block/src/test/kotlin/jp/co/soramitsu/iroha2/: DeserializerTest.kt  SerializerTest.kt
modules/block/src/test/resources/: executor.wasm
modules/client/: build.gradle
modules/client/src/main/kotlin/jp/co/soramitsu/iroha2/: Crypto.kt  Enums.kt  Exceptions.kt  Extensions.kt  Extractors.kt  SingletonHolder.kt
modules/client/src/main/kotlin/jp/co/soramitsu/iroha2/client/: Iroha2AsyncClient.kt  Iroha2Client.kt
modules/client/src/main/kotlin/jp/co/soramitsu/iroha2/model/: IrohaUrls.kt  Page.kt
modules/client/src/main/kotlin/jp/co/soramitsu/iroha2/query/: Queries.kt  QueryBuilder.kt
modules/client/src/main/kotlin/jp/co/soramitsu/iroha2/transaction/: Instructions.kt  TransactionBuilder.kt
modules/client/src/test/java/jp/co/soramitsu/iroha2/: JavaTest.java
modules/client/src/test/kotlin/jp/co/soramitsu/iroha2/: BlockStreamTest.kt  ExampleTest.kt  GenesisTest.kt  InstructionsTest.kt  PeerTest.kt  QueriesTest.kt  TriggersTest.kt
modules/client/src/test/kotlin/jp/co/soramitsu/iroha2/annotations/: Permission.kt  Query.kt  Sdk.kt  SdkTestId.kt
modules/client/src/test/kotlin/jp/co/soramitsu/iroha2/testengine/: Genesis.kt
modules/client/src/test/kotlin/jp/co/soramitsu/iroha2/util/: CryptoTest.kt  FixnumTest.kt
modules/client/src/test/resources/: create_nft_for_alice_smartcontract.wasm  executor.wasm  genesis.json
modules/client/src/test/resources/create_nft_for_alice_smartcontract/: Cargo.toml  build.sh
modules/client/src/test/resources/create_nft_for_alice_smartcontract/src/: lib.rs
modules/client/src/test/resources/executor/: Cargo.toml  build.sh
modules/client/src/test/resources/executor/src/: lib.rs
modules/codegen/: build.gradle
modules/codegen/src/main/kotlin/jp/co/soramitsu/iroha2/: EntryPoint.kt
modules/codegen/src/main/kotlin/jp/co/soramitsu/iroha2/codegen/: KotlinTypeResolver.kt
modules/codegen/src/main/kotlin/jp/co/soramitsu/iroha2/parse/: ExtractGeneric.kt  SchemaParser.kt  SchemaReader.kt  TypeResolver.kt
modules/codegen/src/main/kotlin/jp/co/soramitsu/iroha2/type/: Common.kt  Composite.kt  Int.kt  (+2 more)
modules/codegen/src/main/resources/: schema.json
modules/model/: build.gradle
modules/model/src/main/kotlin/jp/co/soramitsu/iroha2/: Comparators.kt  Crypto.kt  Exceptions.kt  Extensions.kt  Fixnum.kt  ModelCustomInstruction.kt  ModelParameter.kt  ModelPermission.kt  Serde.kt  TriggerArgs.kt  Util.kt
modules/test-tools/: build.gradle
modules/test-tools/src/main/resources/: executor.wasm  genesis.json  genesis2.json  genesis3.json
(+49 files in other folders)
