[package]
name = "create_nft_for_alice_smartcontract"
version = "2.0.0-rc.1.0"
# TODO: teams are being deprecated update the authors URL
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"

[lib]
# Smartcontract should be linked dynamically so that it may link to functions exported
# from the host environment. Also, host environment executes the smartcontract by
# calling the function which smartcontract exports(entry point of execution)
crate-type = ['cdylib']

# Empty workspace to fix "current package believes it's in a workspace when it's not"
[workspace]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.deploy]
inherits = "release"
strip = "debuginfo" # Remove debugging info from the binary
lto = true          # Link-time-optimization produces notable decrease in binary size
opt-level = "z"     # Optimize for size vs speed with "s"/"z"(removes vectorization)
codegen-units = 1   # Further reduces binary size but increases compilation time

[dependencies]
iroha_trigger = { git = "https://github.com/hyperledger/iroha/", branch = "2.0.0-rc.1", features = ["debug"] }

dlmalloc = { version = "0.2.6", features = ["global"] }
panic-halt = "0.2.0"
