[package]
name = "iroha_java_executor"
edition = "2021"
version = "2.0.0-pre-rc.19"
# TODO: teams are being deprecated update the authors URL
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]

[lib]
crate-type = ['cdylib']

[profile.dev]
panic = "abort"

[profile.release]
strip = "debuginfo" # Remove debugging info from the binary
panic = "abort"     # Panics are transcribed to Traps when compiling for wasm anyways
lto = true          # Link-time-optimization produces notable decrease in binary size
opt-level = "z"     # Optimize for size vs speed with "s"/"z"(removes vectorization)
codegen-units = 1   # Further reduces binary size but increases compilation time

[dependencies]
iroha_executor = { git = "https://github.com/hyperledger/iroha/", branch = "main", features = ["debug"] }

dlmalloc = { version = "0.2.6", features = ["global"] }
panic-halt = "0.2.0"
